# ForecastTrainer

./: .gitignore  AGENTS.md  README.md  check_nf_version.py  pyproject.toml
.cursor/rules/: accuracy_boost_tricks.mdc  data_pipeline.mdc  evaluation_monitoring.mdc  gpu_training_refactor_roadmap.mdc  key_code_snippets.mdc  multi_resolution_model.mdc  next_actions.mdc  package_runtime_stack.mdc  production_reproducibility.mdc  repository_layout.mdc  training_loop.mdc
conf/: test_escape_room_config.yaml  tune.yaml
escape-room-forecast/: Makefile  README.md  peek_data.py  pyproject.toml
escape-room-forecast/conf/: debug_train_config.yaml  improved_train_config_1hr.yaml  linux_4090_train.yaml  quick_test_config_1min.yaml  temp_train_config_1min.yaml  train_config_4hr.yaml
escape-room-forecast/docker/: 4090.Dockerfile
escape-room-forecast/src/forecast_cli/: __init__.py  cli.py
escape-room-forecast/src/forecast_cli/convert/: main.py
escape-room-forecast/src/forecast_cli/datamodules/: __init__.py
escape-room-forecast/src/forecast_cli/features/: __init__.py  calendar.py  external.py  price_capacity.py  promotional.py  static.py  temporal.py  weather.py
escape-room-forecast/src/forecast_cli/prep/: __init__.py  preprocessor.py
escape-room-forecast/src/forecast_cli/training/: __init__.py  train.py
escape-room-forecast/src/forecast_cli/utils/: __init__.py  common.py  convert.py
escape-room-forecast/tests/: test_data_prep.py  test_preprocessor_basic.py
forecast_cli/: cli.py  train_escape_room.py
forecast_cli/data/cache/: bookings_processed.parquet
forecast_cli/data/ingestion/: sales_loader.py
forecast_cli/data/processing/: escape_room_processor.py  feature_builder.py
forecast_cli/datamodules/: __init__.py  escape_room_datamodule.py  splitters.py
forecast_cli/datamodules/datasets/: __init__.py  escape_room_ts_dataset.py  multires_dataset.py
forecast_cli/evaluation/: backtest.py  interpretability.py  metrics.py
forecast_cli/training/: trainer.py
forecast_cli/tuning/: tuning.py
forecast_cli/utils/: app_logging.py  config.py  slug.py
forecast_cli_legacy/: custom_nhits.py  multitarget_wrapper.py
raw_data/: bookings.csv
src/forecast_cli/convert/: __init__.py
src/forecast_cli/features/: __init__.py  calendar.py  external.py  price_capacity.py  promotional.py  static.py  temporal.py
src/forecast_cli/io/: __init__.py
src/forecast_cli/prep/: __init__.py  preprocessor.py
src/forecast_cli/utils/: __init__.py  common.py
